fix wrapping for long link labels

--- a/foundation_cms/static/scss/components/list_block.scss
+++ b/foundation_cms/static/scss/components/list_block.scss
@@ -44,6 +44,7 @@ body.redesign {
       width: 100%;
       padding-right: 2rem;
       position: relative;
+      text-wrap: wrap;
 
       &::after {
         width: 1rem;
